crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@fun__id.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/fun/id.panda
---
Ok(
    Fun(
        Fun {
            arg: "x",
            body: Var(
                Var {
                    name: "x",
                },
            ),
        },
    ),
)
