crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@fun__nested.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/fun/nested.panda
---
Ok(
    Fun(
        Fun {
            arg: "x",
            body: Fun(
                Fun {
                    arg: "y",
                    body: BinOp(
                        BinOp {
                            left: Var(
                                Var {
                                    name: "x",
                                },
                            ),
                            right: Var(
                                Var {
                                    name: "y",
                                },
                            ),
                            kind: Add,
                        },
                    ),
                },
            ),
        },
    ),
)
